--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,11 @@
 			<artifactId>Proyecto2ChatProtocol</artifactId>
 			<version>1.0-SNAPSHOT</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.21</version>
+		</dependency>
     </dependencies>
 </project>
